JS-161 Separate bridge from sonar-javascript-plugin (#4697)